--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,10 @@
   font-style: normal;
 }
 
+html {
+  -webkit-tap-highlight-color: transparent;
+}
+
 /* width */
 ::-webkit-scrollbar {
   width: 15px;
@@ -63,3 +67,5 @@
 ul {
   list-style-type: none;
 }
+
+/* swiper */
