modify css of input tag

--- a/src/index.css
+++ b/src/index.css
@@ -68,4 +68,9 @@ ul {
   list-style-type: none;
 }
 
-/* swiper */
+/* Search: span tag  */
+.css-xl71ch {
+  display: inline-flex;
+  display: -ms-inline-flexbox;
+  display: -webkit-inline-flex;
+}
